--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-file-base64": "^1.0.3",
     "react-redux": "^7.2.6",
+    "react-scripts": "5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2"
